# DinoGame

./: CMakeLists.txt  DinoGame  README.md  run.sh
Debug/: TEST.ilk
TEST/: Classes.cpp  TEST.vcxproj  TEST.vcxproj.filters  function.cpp  main.cpp
TEST/Debug/: vc142.idb
TEST/Debug/TEST.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
include/: Classes.h  function.h
src/: Classes.cpp  function.cpp  main.cpp
